[package]
name = "benchtool-rust"
version = "0.1.0"
authors = ["Bruno Shiroma <brunoshiroma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2"
num-traits = "0.2.11"

[[bin]]
name = "benchtool-rust"
path = "src/main.rs"

[lib]
name = "benchtoolrust"
crate-type = ["staticlib", "cdylib"]


[profile.release]
codegen-units=1